Finished receiveMessage functionality
